--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,8 @@
 <configuration>
   <packageSources>
     <clear />
+    <add key="msbuild-dev" value="%TESTMSBUILD_MSBUILD_PACKAGE_ROOT%" />
+    <add key="sourcelink-dev" value="%TESTMSBUILD_SOURCELINK_PACKAGE_ROOT%" />
     <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
     <!--  Begin: Package sources from dotnet-deployment-tools -->
     <add key="darc-pub-dotnet-deployment-tools-b2d5c0c" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-deployment-tools-b2d5c0c5/nuget/v3/index.json" />
