--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -135,18 +135,18 @@
   </PropertyGroup>
   <PropertyGroup>
     <!-- Dependencies from https://github.com/nuget/nuget.client -->
-    <NuGetBuildTasksPackageVersion>6.13.0-zlocal.32767</NuGetBuildTasksPackageVersion>
-    <NuGetBuildTasksConsolePackageVersion>6.13.0-zlocal.32767</NuGetBuildTasksConsolePackageVersion>
-    <NuGetLocalizationPackageVersion>6.13.0-zlocal.32767</NuGetLocalizationPackageVersion>
-    <NuGetBuildTasksPackPackageVersion>6.13.0-zlocal.32767</NuGetBuildTasksPackPackageVersion>
-    <NuGetCommandLineXPlatPackageVersion>6.13.0-zlocal.32767</NuGetCommandLineXPlatPackageVersion>
-    <NuGetProjectModelPackageVersion>6.13.0-zlocal.32767</NuGetProjectModelPackageVersion>
-    <MicrosoftBuildNuGetSdkResolverPackageVersion>6.13.0-zlocal.32767</MicrosoftBuildNuGetSdkResolverPackageVersion>
-    <NuGetCommonPackageVersion>6.13.0-zlocal.32767</NuGetCommonPackageVersion>
-    <NuGetConfigurationPackageVersion>6.13.0-zlocal.32767</NuGetConfigurationPackageVersion>
-    <NuGetFrameworksPackageVersion>6.13.0-zlocal.32767</NuGetFrameworksPackageVersion>
-    <NuGetPackagingPackageVersion>6.13.0-zlocal.32767</NuGetPackagingPackageVersion>
-    <NuGetVersioningPackageVersion>6.13.0-zlocal.32767</NuGetVersioningPackageVersion>
+    <NuGetBuildTasksPackageVersion>6.12.2-zlocal.32767</NuGetBuildTasksPackageVersion>
+    <NuGetBuildTasksConsolePackageVersion>6.12.2-zlocal.32767</NuGetBuildTasksConsolePackageVersion>
+    <NuGetLocalizationPackageVersion>6.13.1-rc.1</NuGetLocalizationPackageVersion>
+    <NuGetBuildTasksPackPackageVersion>6.12.2-zlocal.32767</NuGetBuildTasksPackPackageVersion>
+    <NuGetCommandLineXPlatPackageVersion>6.12.2-zlocal.32767</NuGetCommandLineXPlatPackageVersion>
+    <NuGetProjectModelPackageVersion>6.12.2-zlocal.32767</NuGetProjectModelPackageVersion>
+    <MicrosoftBuildNuGetSdkResolverPackageVersion>6.12.2-zlocal.32767</MicrosoftBuildNuGetSdkResolverPackageVersion>
+    <NuGetCommonPackageVersion>6.12.2-zlocal.32767</NuGetCommonPackageVersion>
+    <NuGetConfigurationPackageVersion>6.12.2-zlocal.32767</NuGetConfigurationPackageVersion>
+    <NuGetFrameworksPackageVersion>6.12.2-zlocal.32767</NuGetFrameworksPackageVersion>
+    <NuGetPackagingPackageVersion>6.12.2-zlocal.32767</NuGetPackagingPackageVersion>
+    <NuGetVersioningPackageVersion>6.12.2-zlocal.32767</NuGetVersioningPackageVersion>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Dependencies from https://github.com/Microsoft/vstest -->
