--- a/src/WebSdk/Publish/Targets/TransformTargets/Microsoft.NET.Sdk.Publish.TransformFiles.targets
+++ b/src/WebSdk/Publish/Targets/TransformTargets/Microsoft.NET.Sdk.Publish.TransformFiles.targets
@@ -35,7 +35,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
   TARGET : _TransformWebConfig
   ***********************************************************************************************
  -->
-  <Target Name="_TransformWebConfig">
+  <Target Name="_TransformWebConfig" PrecomputeMerge="GenerateOutDir">
 
     <PropertyGroup>
       <_IsAspNetCoreProject Condition=" %(ProjectCapability.Identity) == 'AspNetCore' ">true</_IsAspNetCoreProject>
